Updated to new version

--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
   <groupId>org.mulgara.mrg</groupId>
   <artifactId>mrg</artifactId>
   <packaging>jar</packaging>
-  <version>0.3</version>
+  <version>0.4</version>
   <name>mrg</name>
-  <url>http://mulgara.org</url>
+  <url>http://mrg.googlecode.com/</url>
   <description>Mulgara RDF Graph: An RDF Graph API for Java</description>
 
   <properties>
