--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -33,5 +33,10 @@
       <artifactId>xercesImpl</artifactId>
       <version>2.7.1</version>
     </dependency>
+    <dependency>
+      <groupId>joda-time</groupId>
+      <artifactId>joda-time</artifactId>
+      <version>1.6.2</version>
+    </dependency>
   </dependencies>
 </project>
