--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.mulgara</groupId>
   <artifactId>mrg</artifactId>
   <packaging>jar</packaging>
-  <version>0.7-SNAPSHOT</version>
+  <version>0.7</version>
   <name>mrg</name>
   <url>http://mrg.googlecode.com/</url>
   <description>Mulgara RDF Graph: An RDF Graph API for Java</description>
@@ -16,9 +15,9 @@
     </license>
   </licenses>
   <scm>
-    <connection>scm:svn:http://mrg.googlecode.com/svn/trunk/</connection>
-    <developerConnection>scm:svn:https://mrg.googlecode.com/svn/trunk/</developerConnection>
-    <url>http://mrg.googlecode.com/svn/trunk/</url>
+    <connection>scm:svn:http://mrg.googlecode.com/svn/tags/mrg-0.7</connection>
+    <developerConnection>scm:svn:https://mrg.googlecode.com/svn/tags/mrg-0.7</developerConnection>
+    <url>http://mrg.googlecode.com/svn/tags/mrg-0.7</url>
   </scm>
   <developers>
     <developer>
