--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
   <developers>
     <developer>
       <id>quoll</id>
-      <name>Paul Gearon</name>
+      <name>Paula Gearon</name>
       <email>gearon@computer.org</email>
     </developer>
   </developers>
@@ -55,7 +55,7 @@
     <dependency>
       <groupId>xerces</groupId>
       <artifactId>xercesImpl</artifactId>
-      <version>2.7.1</version>
+      <version>2.12.0</version>
     </dependency>
     <dependency>
       <groupId>joda-time</groupId>
